дз: исправил SearchServiceTest и BasketServiceTest